Din commit-beskrivning här

--- a/ME.html
+++ b/ME.html
@@ -2,19 +2,15 @@
 <html lang="sv">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Lägg till denna rad -->
     <title>اسلامية</title>
     <link rel="stylesheet" href="STYLE.CSS"> <!-- Korrigerat CSS-filnamn -->
     <link rel="icon" href="favicon.ico">
 </head>
 
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <body>
 
-
-
-<main class = "main">
+<main class="main">
    
     <header>
         <nav class="nav">
@@ -23,56 +19,22 @@
             <a href="AHADITH_SAHIHA.html">احاديث صحيحة</a> |
             <a href="OMOSS.html">حول موقعنا</a>    |
             <a href="KONTAKTAOSS.htm">تواصل معنا</a>    |
-
         </nav>
     </header>
 
-
-
-
-
-
-
-
-
-
-
-
     <article>
+        <h1 class="h12">دعونا نتقرب الى الله سوية ايها المسلمون</h1>
 
+        <p><img src="WaseemAssafImg.jpg" alt="ISLAM-PICTURE"></p>
 
+        <h2><p class="välkomnestext">السلام عليكم ورحمه الله تعالى وبركاته. اهلا وسهلا بكم في صفحتنا المتواضعة و نرحب بكم جميعا ونسال الله بان يرزقنا واياكم حبه وحب التقرب الى وجهه الكريم. هذه الصفحة المتواضعة تنشر لكم بعض الادعية والاحاديث الصحيحة المهمة جدا.. وسيكون من الجميل بان نجعل هذه الادعية تتكرر كل يوم في حياتنا لكي نكسب حب الله ورضاه. نسال الله لنا ولكم العافية
+        وارجوا ان تنال الصفحة اعجابكم, مع التحياتي وسيم عساف.</p></h2>
 
-
-    <h1 class = "h12">دعونا نتقرب الى الله سوية ايها المسلمون</h1>
-
-
-
-
-    <p><img src="WaseemAssafImg.jpg" alt="ISLAM-PICTURE"></p>
-
-
-
-    <h2><p class = "välkomnestext">السلام عليكم ورحمه الله تعالى وبركاته. اهلا وسهلا بكم في صفحتنا المتواضعة و نرحب بكم جميعا ونسال الله بان يرزقنا واياكم حبه وحب التقرب الى وجهه الكريم. هذه الصفحة المتواضعة تنشر لكم بعض الادعية والاحاديث الصحيحة المهمة جدا.. وسيكون من الجميل بان نجعل هذه الادعية تتكرر كل يوم في حياتنا لكي نكسب حب الله ورضاه. نسال الله لنا ولكم العافية
-    وارجوا ان تنال الصفحة اعجابكم, مع التحياتي وسيم عساف.</p></h2>
-
-
-    <p>Det här var lite kort om mig själv, ni kan alltid hitta mig här -> <a href = "https://www.instagram.com/w.a.s.e.e.m.11/"><target="_blank">Waseem Assaf</a></p>
-
-
-
-
+        <p>Det här var lite kort om mig själv, ni kan alltid hitta mig här -> </p>
     </article>
 
-
-
-
 </main>
-
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
-
-
-
-
