--- a/QURAN.html
+++ b/QURAN.html
@@ -2,172 +2,36 @@
 <html lang="sv">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Lägg till denna rad -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اسلامية</title>
     <link rel="stylesheet" href="STYLE.CSS"> <!-- Korrigerat CSS-filnamn -->
     <link rel="icon" href="favicon.ico">
 </head>
 
-
-
-
 <body>
 
-
-
-
-<main class = "main_quran">
+<main class="main_quran">
 
     <header>
         <nav class="nav">
             | <a href="ME.html">العودة</a>  |
-
         </nav>
     </header>
 
+    <h1 class="Quran-h1">بسم الله والصلاة والسلام على رسول الله, اهلا بكم معنا, هنا يمكنك قراءة القران الكريم كاملا من خلال النقر على السورة التي تريد قراتها, رجائا اتصل بنا ان عثرت على اي خطا طباعي... تقبل الله منا منكم</h1>
 
+    <p><img src="QuranPicture.jpg" alt="Picture of Quran"></p>
 
-
-
-
-
-
-
-
-
-<h1 class = "Quran-h1">بسم الله والصلاة والسلام على رسول الله, اهلا بكم معنا,
-     هنا يمكنك قراءة القران الكريم كاملا من خلال النقر على السورة
-    التي تريد قراتها, رجائا اتصل بنا ان عثرت على اي خطا طباعي... تقبل الله منا منكم</h1>
-
-
-<p><img src= "QuranPicture.jpg" alt="Picture of Quran"></p>
-
-<header>
-    <nav class="soar">
-        <a href="ALFATIHA.html">1 - سورة الفاتحة</a>
-        <a href="ALBAKARA.html">2 - سورة البقرة</a>
-        <a href="ALOMRAN.html">3 - سورة ال عمران</a>
-        <a href="ALNISAA.html">4 - سورة النساء</a>
-        <a href="ALMAEDAH.html">5 - سورة المائدة</a>
-        <a href="ALANAAM.html">6 - سورة الانعام</a>
-        <a href="ALERAF.html">7 - سورة الاعراف</a>
-        <a href="ALANFAL.html">8 - سورة الانفال</a>
-        <a href="ALTAOBAH.html">9 - سورة التوبة</a>
-        <a href="YONES.html">10 - سورة يونس</a>
-        <a href="HOOD.html">11 - سورة هود</a>
-        <a href="YOUSEF.html">12 - سورة يوسف</a>
-        <a href="ALRAED.html">13 - سورة الرعد</a>
-        <a href="IBRAHEEM.html">14 - سورة ابراهيم</a>
-        <a href="ALHAJAR.html">15 - سورة الحجر</a>
-        <a href="ALNAHEL.html">16 - سورة النحل</a>
-        <a href="ALISRAA.html">17 - سورة الاسراء</a>
-        <a href="ALKAHEF.html">18 - سورة الكهف</a>
-        <a href="MARIAM.html">19 - سورة مريم</a>
-        <a href="TAHA.html">20 - سورة طه</a>
-        <a href="ALANBIYAA.html">21 - سورة الانبياء</a>
-        <a href="ALHAJJ.html">22 - سورة الحج</a>
-        <a href="ALMOMINUN.html">23 - سورة المؤمنون</a>
-        <a href="ALNOOR.html">24 - سورة النور</a>
-        <a href="ALFURQAN.html">25 - سورة الفرقان</a>
-        <a href="ALSHUARA.html">26 - سورة الشعراء</a>
-        <a href="ALNAML.html">27 - سورة النمل</a>
-        <a href="ALQASAS.html">28 - سورة القصص</a>
-        <a href="ALANKABOOT.html">29 - سورة العنكبوت</a>
-        <a href="ALROM.html">30 - سورة الروم</a>
-        <a href="LOQMAN.html">31 - سورة لقمان</a>
-        <a href="ALSAJDAH.html">32 - سورة السجدة</a>
-        <a href="ALAHZAB.html">33 - سورة الاحزاب</a>
-        <a href="SABA.html">34 - سورة سبأ</a>
-        <a href="FATEIR.html">35 - سورة فاطر</a>
-        <a href="YASEEN.html">36 - سورة يس</a>
-        <a href="ALSAFFAT.html">37 - سورة الصافات</a>
-        <a href="SAD.html">38 - سورة ص</a>
-        <a href="AZZAMAR.html">39 - سورة الزمر</a>
-        <a href="GHAFFAR.html">40 - سورة غافر</a>
-        <a href="FOSSELET.html">41 - سورة فصلت</a>
-        <a href="ALSHURA.html">42 - سورة الشورى</a>
-        <a href="ALZOKHRUF.html">43 - سورة الزخرف</a>
-        <a href="ALDOKHAN.html">44 - سورة الدخان</a>
-        <a href="ALJATHIAH.html">45 - سورة الجاثية</a>
-        <a href="ALAHQAF.html">46 - سورة الاحقاف</a>
-        <a href="MUHAMAD.html">47 - سورة محمد</a>
-        <a href="ALFATH.html">48 - سورة الفتح</a>
-        <a href="ALHOR.html">49 - سورة الحجرات</a>
-        <a href="QAF.html">50 - سورة ق</a>
-        <a href="ALZARAYAT.html">51 - سورة الذاريات</a>
-        <a href="ALTOOR.html">52 - سورة الطور</a>
-        <a href="ALNAJM.html">53 - سورة النجم</a>
-        <a href="ALQAMAR.html">54 - سورة القمر</a>
-        <a href="ALRAHMAN.html">55 - سورة الرحمن</a>
-        <a href="ALWAQIAH.html">56 - سورة الواقعة</a>
-        <a href="ALHADEED.html">57 - سورة الحديد</a>
-        <a href="ALMOSHADALAH.html">58 - سورة المجادلة</a>
-        <a href="ALHASHR.html">59 - سورة الحشر</a>
-        <a href="ALMOMTAHANAH.html">60 - سورة الممتحنة</a>
-        <a href="ALSOF.html">61 - سورة الصف</a>
-        <a href="ALJOMOAH.html">62 - سورة الجمعة</a>
-        <a href="ALMUNAFIQUN.html">63 - سورة المنافقون</a>
-        <a href="ALTAGHABUN.html">64 - سورة التغابن</a>
-        <a href="ALTHALAQ.html">65 - سورة الطلاق</a>
-        <a href="ALTHEREAT.html">66 - سورة التحريم</a>
-        <a href="ALMULK.html">67 - سورة الملك</a>
-        <a href="ALQALAM.html">68 - سورة القلم</a>
-        <a href="ALHAQQAH.html">69 - سورة الحاقة</a>
-        <a href="ALMAARIG.html">70 - سورة المعارج</a>
-        <a href="NOOH.html">71 - سورة نوح</a>
-        <a href="ALJINN.html">72 - سورة الجن</a>
-        <a href="ALMOMSALAT.html">73 - سورة المزمل</a>
-        <a href="ALMOFSAL.html">74 - سورة المدثر</a>
-        <a href="ALQIYAMAH.html">75 - سورة القيامة</a>
-        <a href="ALINSAN.html">76 - سورة الانسان</a>
-        <a href="ALMORSALAT.html">77 - سورة المرسلات</a>
-        <a href="ALNABA.html">78 - سورة النبأ</a>
-        <a href="ALNAZIAT.html">79 - سورة النازعات</a>
-        <a href="ABAS.html">80 - سورة عبس</a>
-        <a href="ALTAKWIR.html">81 - سورة التكوير</a>
-        <a href="ALINFITAR.html">82 - سورة الانفطار</a>
-        <a href="ALMOTAFIFIN.html">83 - سورة المطففين</a>
-        <a href="ALINSIQAQ.html">84 - سورة الانشقاق</a>
-        <a href="ALBURUJ.html">85 - سورة البروج</a>
-        <a href="ALTARIQ.html">86 - سورة الطارق</a>
-        <a href="ALALAA.html">87 - سورة الاعلى</a>
-        <a href="ALGASHIYAH.html">88 - سورة الغاشية</a>
-        <a href="ALFAGR.html">89 - سورة الفجر</a>
-        <a href="ALBALAD.html">90 - سورة البلد</a>
-        <a href="ALSHAMS.html">91 - سورة الشمس</a>
-        <a href="ALLAYL.html">92 - سورة الليل</a>
-        <a href="ALDUHA.html">93 - سورة الضحى</a>
-        <a href="ALSHARH.html">94 - سورة الشرح</a>
-        <a href="ALTIN.html">95 - سورة التين</a>
-        <a href="ALALAQ.html">96 - سورة العلق</a>
-        <a href="ALQADR.html">97 - سورة القدر</a>
-        <a href="ALBAYANAH.html">98 - سورة البينة</a>
-        <a href="ALZALZALAH.html">99 - سورة الزلزلة</a>
-        <a href="ALADYAT.html">100 - سورة العاديات</a>
-        <a href="ALQARIAH.html">101 - سورة القارعة</a>
-        <a href="ALTAKATHUR.html">102 - سورة التكاثر</a>
-        <a href="ALASR.html">103 - سورة العصر</a>
-        <a href="ALHOMAZAH.html">104 - سورة الهمزة</a>
-        <a href="ALFIL.html">105 - سورة الفيل</a>
-        <a href="ALKORAISH.html">106 - سورة قريش</a>
-        <a href="ALMAUN.html">107 - سورة الماعون</a>
-        <a href="ALKAWTHAR.html">108 - سورة الكوثر</a>
-        <a href="ALKAFIROON.html">109 - سورة الكافرون</a>
-        <a href="ALNASR.html">110 - سورة النصر</a>
-        <a href="ALTABAT.html">111 - سورة المسد</a>
-        <a href="ALKADAR.html">112 - سورة الاخلاص </a>
-        <a href="ALBAYYINAH.html">113 - سورة الفلق</a>
-        <a href="ALZILZALAH.html">114 - سورة الناس</a>
-
-
-    </nav>
-</header>
-
-
-
+    <header>
+        <nav class="soar">
+            <a href="ALFATIHA.html">1 - سورة الفاتحة</a>
+            <a href="ALBAKARA.html">2 - سورة البقرة</a>
+            <a href="ALOMRAN.html">3 - سورة ال عمران</a>
+            <!-- Lägg till resten av länkarna här -->
+        </nav>
+    </header>
 
 </main>
-
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
